--- a/SP/Config/DefaultEngine.ini
+++ b/SP/Config/DefaultEngine.ini
@@ -184,6 +184,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/SP")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="SPGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="SPCharacter")
+AssetManagerClassName=/Script/SP.SPAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
